fix: escape `"` in `br_hippodrome_l_english.yml`
This is needed to be `YAML` compliant.

--- a/localization/english/br_hippodrome_l_english.yml
+++ b/localization/english/br_hippodrome_l_english.yml
@@ -56,31 +56,31 @@
  chariot_racing.48.a: ""
  chariot_racing.50.t: "A Day at the Races"
  chariot_racing.50.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, the #red Reds#! came out victorious."
- chariot_racing.50.f: ""As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.""
+ chariot_racing.50.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.\""
  chariot_racing.50.a: "What a great display of Romaíon tradition."
  chariot_racing.51.t: "A Day at the Races"
  chariot_racing.51.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, the #white Whites#! came out victorious."
- chariot_racing.51.f: ""As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.""
+ chariot_racing.51.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.\""
  chariot_racing.51.a: "What a great display of Romaíon tradition." 
  chariot_racing.52.t: "A Day at the Races"
  chariot_racing.52.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, the #green Greens#! came out victorious."
- chariot_racing.52.f: ""As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.""
+ chariot_racing.52.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.\""
  chariot_racing.52.a: "What a great display of Romaíon tradition." 
  chariot_racing.53.t: "A Day at the Races"
  chariot_racing.53.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, the #blue Blues#! came out victorious."
- chariot_racing.53.f: ""As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.""
+ chariot_racing.53.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.\""
  chariot_racing.53.a: "What a great display of Romaíon tradition."
  chariot_racing.54.t: "A Day at the Races"
  chariot_racing.54.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, the #purple Purples#! came out victorious."
- chariot_racing.54.f: ""As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.""
+ chariot_racing.54.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.\""
  chariot_racing.54.a: "What a great display of Romaíon tradition."
  chariot_racing.55.t: "A Day at the Races"
  chariot_racing.55.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, the #gold Golds#! came out victorious."
- chariot_racing.55.f: ""As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.""
+ chariot_racing.55.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.\""
  chariot_racing.55.a: "What a great display of Romaíon tradition."
  chariot_racing.56.t: "A Day at the Races - Diversum"
  chariot_racing.56.d: "Under the summer sun, the great racing factions lined up at the starting line of the great Hippodrome. The circus, packed to the brim with spectators, was alight with the cheers of fans and detractors alike. At the sound of the gun, the chariots flew across the track, each team urging their horses forward. In the end, no team could claim victory after the day's matches. The crowd has called for a #italic diversum#!, a tiebreaker match."
- chariot_racing.56.f: ""As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.""
+ chariot_racing.56.f: "\"As the horses made turn after turn, the crowd roared and the ground trembled. It was as if the Queen of Cities itself had come to life.\""
  chariot_racing.56.a: "We shall schedule the rematches."
  chariot_racing.56.b: "We will call it a draw."
  chariot_racing.57.t: "Sporting Riot"
