--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -107,28 +107,28 @@
  je_eastern_resistance_reason: "The vast swaths of land that make up our eastern holdings have been largely neglected for the most part of our history and what once made up The Great Kyivan Rus now is place of constant Tatar raids and exploitative serfdom of The Szlachta, if we don't end their plight and allow them to flourish within our borders, they eventually will rise up and take the matter into their own hands, which will mean the end of The Commonwealth."
  
   #Moldova
- je_army_modernization:0 "Army reform and modernization"
- je_army_modernization_reason:0 "With potential enemies on all sides we need to start modernizing our army and build a local arms industry to protect and expand our interests in the Danubian Region."
+ je_army_modernization: "Army reform and modernization"
+ je_army_modernization_reason: "With potential enemies on all sides we need to start modernizing our army and build a local arms industry to protect and expand our interests in the Danubian Region."
 
- je_side_russia:0 "A Golden Offer"
- je_side_russia_goal:0 "The Organic Regulations have been extended, the army modernized and our industrial complex developed"
- je_side_russia_reason:0 "Our efforts to reform and modernize have not gone unnoticed, the Golden Horde is preparing an offer for us, but what could they possibly want?"
+ je_side_russia: "A Golden Offer"
+ je_side_russia_goal: "The Organic Regulations have been extended, the army modernized and our industrial complex developed"
+ je_side_russia_reason: "Our efforts to reform and modernize have not gone unnoticed, the Golden Horde is preparing an offer for us, but what could they possibly want?"
 
- je_conquer_wallachia_dobruja:0 "Liberate Wallachia and Dobruja"
- je_conquer_wallachia_dobruja_reason:0 "With the Tatars backing we can now liberate Wallachia and Dobruja from the oppressive southern boyars and their Hungarian allies."
+ je_conquer_wallachia_dobruja: "Liberate Wallachia and Dobruja"
+ je_conquer_wallachia_dobruja_reason: "With the Tatars backing we can now liberate Wallachia and Dobruja from the oppressive southern boyars and their Hungarian allies."
 
- je_form_greater_romania_mol:0 "Form Greater Vlachia"
- je_form_greater_romania_mol_reason:0 "With our unification completed, we must strive to unite all our brothers and sisters across the Carpathians and embark on a "special military operation" against the Hungarians to achieve our independence once and for all."
+ je_form_greater_romania_mol: "Form Greater Vlachia"
+ je_form_greater_romania_mol_reason: "With our unification completed, we must strive to unite all our brothers and sisters across the Carpathians and embark on a "special military operation" against the Hungarians to achieve our independence once and for all."
 
   #Wallachia
- je_little_union:0 "The Little Union"
- je_little_union_reason:0 "By abusing loopholes in our treaties with the Great Powers, it is possible to enter in a personal union with Moldavia by electing a ruler in both nations. The Powers will not like it, but they will be powerless to stop our march towards the Union."
+ je_little_union: "The Little Union"
+ je_little_union_reason: "By abusing loopholes in our treaties with the Great Powers, it is possible to enter in a personal union with Moldavia by electing a ruler in both nations. The Powers will not like it, but they will be powerless to stop our march towards the Union."
 
- je_secure_dobruja:0 "War of Independence"
- je_secure_dobruja_reason:0 "The time has come to liberate Dobruja and gain our independence from the Hungarian Empire."
+ je_secure_dobruja: "War of Independence"
+ je_secure_dobruja_reason: "The time has come to liberate Dobruja and gain our independence from the Hungarian Empire."
 
- je_form_greater_romania:0 "Form Greater Vlachia"
- je_form_greater_romania_reason:0 "Now with our independence secured we must strive to unite all our brothers and sisters across the Carpathians and the Pruth river."
+ je_form_greater_romania: "Form Greater Vlachia"
+ je_form_greater_romania_reason: "Now with our independence secured we must strive to unite all our brothers and sisters across the Carpathians and the Pruth river."
 
 
 
