fix: escape `"` in `br_journals_l_english.yml`
This is needed to be `YAML` compliant.

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -118,7 +118,7 @@
  je_conquer_wallachia_dobruja_reason: "With the Tatars backing we can now liberate Wallachia and Dobruja from the oppressive southern boyars and their Hungarian allies."
 
  je_form_greater_romania_mol: "Form Greater Vlachia"
- je_form_greater_romania_mol_reason: "With our unification completed, we must strive to unite all our brothers and sisters across the Carpathians and embark on a "special military operation" against the Hungarians to achieve our independence once and for all."
+ je_form_greater_romania_mol_reason: "With our unification completed, we must strive to unite all our brothers and sisters across the Carpathians and embark on a \"special military operation\" against the Hungarians to achieve our independence once and for all."
 
   #Wallachia
  je_little_union: "The Little Union"
