--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -62,20 +62,20 @@
 
  aegyptian_crisis_events.1.t: "Reasserting Our Authority in Syria"
  aegyptian_crisis_events.1.d: "Aegypt seized most of our Levantine provinces in 1733 after its Exarach tried and failed to overthrow the entire Romaíon government. The time to reclaim the lands we lost in that war is long overdue.\n\nHowever, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe."
- aegyptian_crisis_events.1.f:1 ""What once was ours shall be ours again. The imprint we've left on Aegypt and the Levant cannot be ignored. Like the lines that time carves on a mountain, we have also carved our fate on their land with the footprints of our ancestors.\n\nGo, go now, children of the Sun!""
+ aegyptian_crisis_events.1.f: ""What once was ours shall be ours again. The imprint we've left on Aegypt and the Levant cannot be ignored. Like the lines that time carves on a mountain, we have also carved our fate on their land with the footprints of our ancestors.\n\nGo, go now, children of the Sun!""
  aegyptian_crisis_events.1.a: "We must see to it that they are on our side."
  aegyptian_crisis_events.1.a.tt: "[THIS.GetCountry.GetName] will be offered an [concept_active_interest] in the region."
  aegyptian_crisis_events.1.b: "We do not need their approval to take what is ours."
 
  aegyptian_crisis_events.2.t: "The Romaíon Incursion"
- aegyptian_crisis_events.2.d:1 "The Romaíoi have begun their machinations to retake the lands we won from them in 1733. This is a violation of our sovereignty! However, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe, giving us a chance to gain powerful allies in the conflict."
+ aegyptian_crisis_events.2.d: "The Romaíoi have begun their machinations to retake the lands we won from them in 1733. This is a violation of our sovereignty! However, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe, giving us a chance to gain powerful allies in the conflict."
  aegyptian_crisis_events.2.f: ""I believe the Basilius and I have some unfinished business to attend to.""
  aegyptian_crisis_events.2.a: "We must resist this aggression!"
  aegyptian_crisis_events.2.a.tt: "All European [Concept('concept_great_power', '$concept_great_powers$')] will be offered an [concept_active_interest] in our region."
 
  aegyptian_crisis_events.4.t: "The Aegyptian Crisis"
  aegyptian_crisis_events.4.d: "The Basileía Romaíon's attempt to regain control of Aegypt has become an international incident. Our involvement may tip the balance of power in the region."
- aegyptian_crisis_events.4.f:1 ""I'm not sure why we would ever express any interest in the Middle East. There's so little of value in those far-off lands. Deserts, sand, a wasteland.""
+ aegyptian_crisis_events.4.f: ""I'm not sure why we would ever express any interest in the Middle East. There's so little of value in those far-off lands. Deserts, sand, a wasteland.""
  aegyptian_crisis_events.4.a: "We need to keep an eye on the region."
  aegyptian_crisis_events.4.b: "We have no interest in this crisis."
 
@@ -83,7 +83,7 @@
 
  palaiologos_events.1.t: "The Pronoia System"
  palaiologos_events.1.d: "For centuries our administration has depended on tax farming for collecting revenue, but this highly inefficient system leaves much to be desired. Proposals for reform have flooded the Basileus desk, and the nation eagerly awaits our response."
- palaiologos_events.1.f:1 "Ever since the reign of Alexios II, taxation rights have been auctioned off to the highest bidder, who in turn retain a part of the revenue for personal use. Over time, this has created a cadre of powerful, autonomous, and oftentimes corrupt [SCOPE.gsInterestGroup('governors').GetNameNoFormatting], significantly reducing state revenues.\n\nWhile most agree that the system must change, few agree on how, and fewer still want to antagonize the Dynatói elite."
+ palaiologos_events.1.f: "Ever since the reign of Alexios II, taxation rights have been auctioned off to the highest bidder, who in turn retain a part of the revenue for personal use. Over time, this has created a cadre of powerful, autonomous, and oftentimes corrupt [SCOPE.gsInterestGroup('governors').GetNameNoFormatting], significantly reducing state revenues.\n\nWhile most agree that the system must change, few agree on how, and fewer still want to antagonize the Dynatói elite."
  palaiologos_events.1.a: "Abolish tax farming, but leave the [SCOPE.gsInterestGroup('governors').GetNameNoFormatting] in place."
  palaiologos_events.1.b: "Let sleeping dogs lie."
  palaiologos_events.1.c: "Abolish the system in fact as well as in name."
@@ -99,7 +99,7 @@
 
  palaiologos_events.3.t: "The Themata System"
  palaiologos_events.3.d: "For centuries consolidation of land to powerful Dynatói, has eruded the Themata system of Farmer-Soldiers the practice of granting land to soldiers in exchange for their military service has long disapeared, being replaced by vast Dynatói estates worked by peasants."
- palaiologos_events.3.f:1 "One of the distinctive features of the Themata system is the practice of granting land to soldiers in exchange for their military service. This system of land grants, known as "pronoia," will once again be integral to our defense strategy. It will encourage recruitment, ensure the availability of a standing army, and allow for the efficient mobilization of troops when necessary. These farmer-soldiers and their families will not only serve as the backbone of the military but also contribute to agricultural productivity in their regions during times of peace."
+ palaiologos_events.3.f: "One of the distinctive features of the Themata system is the practice of granting land to soldiers in exchange for their military service. This system of land grants, known as "pronoia," will once again be integral to our defense strategy. It will encourage recruitment, ensure the availability of a standing army, and allow for the efficient mobilization of troops when necessary. These farmer-soldiers and their families will not only serve as the backbone of the military but also contribute to agricultural productivity in their regions during times of peace."
  palaiologos_events.3.a: "Restore the Themata System."
  palaiologos_events.3.b: "Prioritize the Tagmata."
  palaiologos_events.3.c: "Maintain Dynatói privileges."
@@ -109,7 +109,7 @@
  endlatin.1.tt1: "May cause a Diplomatic situation with the Latin powers."
 
  palaiologos_events.4.t: "Non-Romaíoi rights?"
- palaiologos_events.4.d:1 "With our move towards a more professional bureaucratic system in motion, demands have been put forth to nominally elevate the legal status of non-Romaíoi, enabling them to serve as civil servants."
+ palaiologos_events.4.d: "With our move towards a more professional bureaucratic system in motion, demands have been put forth to nominally elevate the legal status of non-Romaíoi, enabling them to serve as civil servants."
  palaiologos_events.4.f: "The preservation of the Basileía Romaíon in the face of unrest, insurrection, and foreign intervention is a, if not the, primary concern of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle]. If we are to achieve this however, steps to appease our minority subjects might be necessary, lest they become pawns of malicious foreign powers."
  palaiologos_events.4.a: "Equal rights under the law! On paper at least."
  palaiologos_events.4.b: "Promise reform, but let us not get carried away."
@@ -117,15 +117,15 @@
  palaiologos.4.tt1: "Elevating the status non-Romaíoi might further antagonize radical Romaíoi voices."
 
  palaiologos_events.5.t: "Whispers of Insurrection"
- palaiologos_events.5.d:1 "A climate of paranoia has enveloped the city of [SCOPE.sState('paranoia_state_scope').GetCityHubName], after the Patriarch accused the [SCOPE.sReligion('discriminated_religion_scope').GetName] community of conspiring with [SCOPE.sCountry('neighbor_country').GetName] to undermine the authority of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle]."
+ palaiologos_events.5.d: "A climate of paranoia has enveloped the city of [SCOPE.sState('paranoia_state_scope').GetCityHubName], after the Patriarch accused the [SCOPE.sReligion('discriminated_religion_scope').GetName] community of conspiring with [SCOPE.sCountry('neighbor_country').GetName] to undermine the authority of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle]."
  palaiologos_events.5.f: ""Are God's adversaries to be the equal of Christ? Some corrupt bureaucrats in [ROOT.GetCountry.GetCapital.GetCityHubName] may think so, but we true believers know better. As we speak, the unbelievers in our midst are busy plotting our doom, conspiring with their foreign masters to carve up our great empire like the confectioner carves up baklava.""
  palaiologos_events.5.a: "They are just rumors, right?"
  palaiologos_events.5.b: "Crack down hard on suspected traitors, better safe than sorry."
  palaiologos.5.tt1: "Radical Orthodox voices might take matters into their own hand."
  palaiologos.5.tt2: "Your actions should satisfy the Orthodox radicals."
 
- palaiologos_events.6.t:1 "Riot in the [SCOPE.sCulture('mob_victim_culture').GetName] Quarter"
- palaiologos_events.6.d:1 "Outraged by the Basileus's decision to elevate the legal status of non-Romaíoi, and spurred on by rumors of foreign-backed insurrection, a large [SCOPE.sReligion('mob_religion').GetName] mob has rampaged through the [SCOPE.sCulture('mob_victim_culture').GetName] quarter of [SCOPE.sState('mob_state_scope').GetCityHubName]."
+ palaiologos_events.6.t: "Riot in the [SCOPE.sCulture('mob_victim_culture').GetName] Quarter"
+ palaiologos_events.6.d: "Outraged by the Basileus's decision to elevate the legal status of non-Romaíoi, and spurred on by rumors of foreign-backed insurrection, a large [SCOPE.sReligion('mob_religion').GetName] mob has rampaged through the [SCOPE.sCulture('mob_victim_culture').GetName] quarter of [SCOPE.sState('mob_state_scope').GetCityHubName]."
  palaiologos_events.6.f: ""They came, wielding sticks and clubs — no-doubt egged on by some militant local preacher. Only some bruises and material damage so far, thank God, but I do not like the look of that crowd over by the western gate.""
  palaiologos_events.6.a: "This is for the local governor to handle."
  palaiologos_events.6.b: "Muster the army, intervene immediately."
@@ -135,8 +135,8 @@
  palaiologos.6.tt3: "Your lack of action is likely to escalate the situation."
 
  palaiologos_events.7.t: "The [SCOPE.sState('massacre_state_scope').GetCityHubName] Massacre"
- palaiologos_events.7.d:1 "Horror! In a fit of merciless fury, a large crowd of [SCOPE.sReligion('sunni_religion').GetName] rioters have turned on their [SCOPE.sReligion('massacre_victims').GetName] neighbors. The streets of [SCOPE.sState('massacre_state_scope').GetCityHubName] run red with blood, and large parts of the city is ablaze."
- palaiologos_events.7.f: ""But whoever deliberately slays another believer, his requital shall be hell, therein to abide; and God will condemn him, and will reject him, and will prepare for him awesome suffering."" # An-Nisa 4:93, al-Quran
+ palaiologos_events.7.d: "Horror! In a fit of merciless fury, a large crowd of [SCOPE.sReligion('sunni_religion').GetName] rioters have turned on their [SCOPE.sReligion('massacre_victims').GetName] neighbors. The streets of [SCOPE.sState('massacre_state_scope').GetCityHubName] run red with blood, and large parts of the city is ablaze."
+ palaiologos_events.7.f: ""But whoever deliberately slays another believer, his requital shall be hell, therein to abide; and God will condemn him, and will reject him, and will prepare for him awesome suffering."" # An-Nisa 4:3, al-Quran
  palaiologos_events.7.a: "Break up the crowds, with bullet fire if need be."
  palaiologos_events.7.b: "That should keep those would-be traitors in line."
 
