fix: escape `"` in `br_events_l_english.yml`
This is needed to be `YAML` compliant.

--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -62,20 +62,20 @@
 
  aegyptian_crisis_events.1.t: "Reasserting Our Authority in Syria"
  aegyptian_crisis_events.1.d: "Aegypt seized most of our Levantine provinces in 1733 after its Exarach tried and failed to overthrow the entire Romaíon government. The time to reclaim the lands we lost in that war is long overdue.\n\nHowever, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe."
- aegyptian_crisis_events.1.f: ""What once was ours shall be ours again. The imprint we've left on Aegypt and the Levant cannot be ignored. Like the lines that time carves on a mountain, we have also carved our fate on their land with the footprints of our ancestors.\n\nGo, go now, children of the Sun!""
+ aegyptian_crisis_events.1.f: "\"What once was ours shall be ours again. The imprint we've left on Aegypt and the Levant cannot be ignored. Like the lines that time carves on a mountain, we have also carved our fate on their land with the footprints of our ancestors.\n\nGo, go now, children of the Sun!\""
  aegyptian_crisis_events.1.a: "We must see to it that they are on our side."
  aegyptian_crisis_events.1.a.tt: "[THIS.GetCountry.GetName] will be offered an [concept_active_interest] in the region."
  aegyptian_crisis_events.1.b: "We do not need their approval to take what is ours."
 
  aegyptian_crisis_events.2.t: "The Romaíon Incursion"
  aegyptian_crisis_events.2.d: "The Romaíoi have begun their machinations to retake the lands we won from them in 1733. This is a violation of our sovereignty! However, this is likely to draw the attention of any [Concept('concept_great_power', '$concept_great_powers$')] in Europe, giving us a chance to gain powerful allies in the conflict."
- aegyptian_crisis_events.2.f: ""I believe the Basilius and I have some unfinished business to attend to.""
+ aegyptian_crisis_events.2.f: "\"I believe the Basilius and I have some unfinished business to attend to.\""
  aegyptian_crisis_events.2.a: "We must resist this aggression!"
  aegyptian_crisis_events.2.a.tt: "All European [Concept('concept_great_power', '$concept_great_powers$')] will be offered an [concept_active_interest] in our region."
 
  aegyptian_crisis_events.4.t: "The Aegyptian Crisis"
  aegyptian_crisis_events.4.d: "The Basileía Romaíon's attempt to regain control of Aegypt has become an international incident. Our involvement may tip the balance of power in the region."
- aegyptian_crisis_events.4.f: ""I'm not sure why we would ever express any interest in the Middle East. There's so little of value in those far-off lands. Deserts, sand, a wasteland.""
+ aegyptian_crisis_events.4.f: "\"I'm not sure why we would ever express any interest in the Middle East. There's so little of value in those far-off lands. Deserts, sand, a wasteland.\""
  aegyptian_crisis_events.4.a: "We need to keep an eye on the region."
  aegyptian_crisis_events.4.b: "We have no interest in this crisis."
 
@@ -99,7 +99,7 @@
 
  palaiologos_events.3.t: "The Themata System"
  palaiologos_events.3.d: "For centuries consolidation of land to powerful Dynatói, has eruded the Themata system of Farmer-Soldiers the practice of granting land to soldiers in exchange for their military service has long disapeared, being replaced by vast Dynatói estates worked by peasants."
- palaiologos_events.3.f: "One of the distinctive features of the Themata system is the practice of granting land to soldiers in exchange for their military service. This system of land grants, known as "pronoia," will once again be integral to our defense strategy. It will encourage recruitment, ensure the availability of a standing army, and allow for the efficient mobilization of troops when necessary. These farmer-soldiers and their families will not only serve as the backbone of the military but also contribute to agricultural productivity in their regions during times of peace."
+ palaiologos_events.3.f: "One of the distinctive features of the Themata system is the practice of granting land to soldiers in exchange for their military service. This system of land grants, known as \"pronoia\", will once again be integral to our defense strategy. It will encourage recruitment, ensure the availability of a standing army, and allow for the efficient mobilization of troops when necessary. These farmer-soldiers and their families will not only serve as the backbone of the military but also contribute to agricultural productivity in their regions during times of peace."
  palaiologos_events.3.a: "Restore the Themata System."
  palaiologos_events.3.b: "Prioritize the Tagmata."
  palaiologos_events.3.c: "Maintain Dynatói privileges."
@@ -118,7 +118,7 @@
 
  palaiologos_events.5.t: "Whispers of Insurrection"
  palaiologos_events.5.d: "A climate of paranoia has enveloped the city of [SCOPE.sState('paranoia_state_scope').GetCityHubName], after the Patriarch accused the [SCOPE.sReligion('discriminated_religion_scope').GetName] community of conspiring with [SCOPE.sCountry('neighbor_country').GetName] to undermine the authority of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle]."
- palaiologos_events.5.f: ""Are God's adversaries to be the equal of Christ? Some corrupt bureaucrats in [ROOT.GetCountry.GetCapital.GetCityHubName] may think so, but we true believers know better. As we speak, the unbelievers in our midst are busy plotting our doom, conspiring with their foreign masters to carve up our great empire like the confectioner carves up baklava.""
+ palaiologos_events.5.f: "\"Are God's adversaries to be the equal of Christ? Some corrupt bureaucrats in [ROOT.GetCountry.GetCapital.GetCityHubName] may think so, but we true believers know better. As we speak, the unbelievers in our midst are busy plotting our doom, conspiring with their foreign masters to carve up our great empire like the confectioner carves up baklava.\""
  palaiologos_events.5.a: "They are just rumors, right?"
  palaiologos_events.5.b: "Crack down hard on suspected traitors, better safe than sorry."
  palaiologos.5.tt1: "Radical Orthodox voices might take matters into their own hand."
@@ -126,7 +126,7 @@
 
  palaiologos_events.6.t: "Riot in the [SCOPE.sCulture('mob_victim_culture').GetName] Quarter"
  palaiologos_events.6.d: "Outraged by the Basileus's decision to elevate the legal status of non-Romaíoi, and spurred on by rumors of foreign-backed insurrection, a large [SCOPE.sReligion('mob_religion').GetName] mob has rampaged through the [SCOPE.sCulture('mob_victim_culture').GetName] quarter of [SCOPE.sState('mob_state_scope').GetCityHubName]."
- palaiologos_events.6.f: ""They came, wielding sticks and clubs — no-doubt egged on by some militant local preacher. Only some bruises and material damage so far, thank God, but I do not like the look of that crowd over by the western gate.""
+ palaiologos_events.6.f: "\"They came, wielding sticks and clubs — no-doubt egged on by some militant local preacher. Only some bruises and material damage so far, thank God, but I do not like the look of that crowd over by the western gate.\""
  palaiologos_events.6.a: "This is for the local governor to handle."
  palaiologos_events.6.b: "Muster the army, intervene immediately."
  palaiologos_events.6.c: "Let the mob run its course."
@@ -136,18 +136,18 @@
 
  palaiologos_events.7.t: "The [SCOPE.sState('massacre_state_scope').GetCityHubName] Massacre"
  palaiologos_events.7.d: "Horror! In a fit of merciless fury, a large crowd of [SCOPE.sReligion('sunni_religion').GetName] rioters have turned on their [SCOPE.sReligion('massacre_victims').GetName] neighbors. The streets of [SCOPE.sState('massacre_state_scope').GetCityHubName] run red with blood, and large parts of the city is ablaze."
- palaiologos_events.7.f: ""But whoever deliberately slays another believer, his requital shall be hell, therein to abide; and God will condemn him, and will reject him, and will prepare for him awesome suffering."" # An-Nisa 4:3, al-Quran
+ palaiologos_events.7.f: "\"But whoever deliberately slays another believer, his requital shall be hell, therein to abide; and God will condemn him, and will reject him, and will prepare for him awesome suffering.\"" # An-Nisa 4:3, al-Quran
  palaiologos_events.7.a: "Break up the crowds, with bullet fire if need be."
  palaiologos_events.7.b: "That should keep those would-be traitors in line."
 
  palaiologos_events.8.t: "Order Restored in [SCOPE.sState('orderrestored_state_scope').GetName]"
  palaiologos_events.8.d: "A sense of normalcy has returned to the streets of [SCOPE.sState('orderrestored_state_scope').GetCityHubName]. Storefronts are being rebuilt and restocked, and statements of distrust and hatred are gradually being replaced with ones of reconciliation."
- palaiologos_events.8.f: ""The bastards ruined my store and insulted my name! But at the very least that was the extent of my injury. My son saw at least two of the men who partook in the riot dragged away by soldiers, apparently outed by their own community. Perhaps there is some justice to be found here after all. Now pass me the sugar, this tea is as bitter as uncured olives.""
+ palaiologos_events.8.f: "\"The bastards ruined my store and insulted my name! But at the very least that was the extent of my injury. My son saw at least two of the men who partook in the riot dragged away by soldiers, apparently outed by their own community. Perhaps there is some justice to be found here after all. Now pass me the sugar, this tea is as bitter as uncured olives.\""
  palaiologos_events.8.a: "God Thanks!"
 
  palaiologos_events.9.t: "Dynatói Resist Land Registration"
  palaiologos_events.9.d: "With the possibility of increased taxation and military service looming large, retainers from [SCOPE.sState('peasant_state').GetName] have refused to register their land, depriving us of much-needed tax revenue."
- palaiologos_events.9.f: ""For two hundred years my family has owned this land; paying our dues as we have according to tradition. But now the bureaucrats of [ROOT.GetCountry.GetCapital.GetCityHubName] have devised yet another insidious system for bleeding us dry, and my sons will be called on to perish on some distant battlefield.""
+ palaiologos_events.9.f: "\"For two hundred years my family has owned this land; paying our dues as we have according to tradition. But now the bureaucrats of [ROOT.GetCountry.GetCapital.GetCityHubName] have devised yet another insidious system for bleeding us dry, and my sons will be called on to perish on some distant battlefield.\""
  palaiologos_events.9.a: "Let local bureaucrats purchase their land, the tax must flow."
  palaiologos_events.9.b: "[SCOPE.sCharacter('peasant_smashing_general').GetFullName] and [SCOPE.sCharacter('peasant_smashing_general').GetHerHis] men will quell this unrest."
  palaiologos_events.9.c: "Leave them be, who cares about [SCOPE.sState('peasant_state').GetNameNoFormatting]?"
@@ -180,7 +180,7 @@
  poland.4.a: "A Mortal Threat To The Commonwealth"
 
  poland.5.t: "The Great Ruthenian Uprising"
- poland.5.d: "To [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] [ROOT.GetCountry.GetRuler.GetFullName] "The cursed King, Slavic Caesar's son, and attendant of the infernal Lucifer in the abyss of hell Polish emperor, footstool of the Galcians, cook of Elbians, locksmith of Russians, wheelwright of Czestochowa, drunkard of Lithuanians, swineherd of greater and lesser Poland, sausage of Warsaw, and dog of Bohemians, the cursed childish knave upon earth and the world, the great fool of Kamenets-Podolsky and the country, and a nasty pig in the world, the Polish biter of men, the commander of the whole hellish empire in the deep abyss of hell, an angel of the infernal devil, a mocker of the crucified God, enemy and persecutor of his servants, below all those who live above, the downfaller of the bishop men: We report to you that we have no thoughts of surrendering to you, but are bravely, manfully, and eternally resolved to fight you and whomever you call a fellow. " "
+ poland.5.d: "To [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] [ROOT.GetCountry.GetRuler.GetFullName] \"The cursed King, Slavic Caesar's son, and attendant of the infernal Lucifer in the abyss of hell Polish emperor, footstool of the Galcians, cook of Elbians, locksmith of Russians, wheelwright of Czestochowa, drunkard of Lithuanians, swineherd of greater and lesser Poland, sausage of Warsaw, and dog of Bohemians, the cursed childish knave upon earth and the world, the great fool of Kamenets-Podolsky and the country, and a nasty pig in the world, the Polish biter of men, the commander of the whole hellish empire in the deep abyss of hell, an angel of the infernal devil, a mocker of the crucified God, enemy and persecutor of his servants, below all those who live above, the downfaller of the bishop men: We report to you that we have no thoughts of surrendering to you, but are bravely, manfully, and eternally resolved to fight you and whomever you call a fellow. \""
  poland.5.f: "Earth is greater than Heaven now;\nThe sun and moon change places.\nOnce I ruled over everything,\nNow I live on the edges. "
  poland.5.a: "Deluge of our times"
 
@@ -221,7 +221,7 @@
  wallachia_events.1.a: "Quite a sensible geopolitical situation"
 
  wallachia_events.3.t: "The Little Union"
- wallachia_events.3.d: "The unification of Moldavia and Wallachia also known as the Little Union happened on 1859 following the election of Alexandru Ioan Cuza as the prince of both principalities, which were autonomous but still vassals of the Hungarian Empire. Both shared a common Vlachian ethnicity, language and culture and the unification of these two states began a political struggle in the new country to find out which of the two regions would obtain "supremacy" and met some opposition in Moldavia by the so-called "separatists"."
+ wallachia_events.3.d: "The unification of Moldavia and Wallachia also known as the Little Union happened on 1859 following the election of Alexandru Ioan Cuza as the prince of both principalities, which were autonomous but still vassals of the Hungarian Empire. Both shared a common Vlachian ethnicity, language and culture and the unification of these two states began a political struggle in the new country to find out which of the two regions would obtain \"supremacy\" and met some opposition in Moldavia by the so-called \"separatists\"."
  wallachia_events.3.a: "For the Union!"
  wallachia_events.3.f: "“Unity to be real must stand the severest strain without breaking.”"
  
