--- a/localization/korean/ib_l_korean .yml
+++ b/localization/korean/ib_l_korean .yml
@@ -46,12 +46,12 @@
 
  ib_events.01.t: "주문화 변경"
  ib_events.01.d: "자랑스러운 [ROOT.GetCountry.GetName]의 [SCOPE.sCountry('culture_target_country').GetName]에 대한 주문화 변경이 무사히 종료되었다. [SCOPE.sCountry('culture_target_country').GetName]는 앞으로 본국의 문화를 향유하며 영원히 번영할 것이다."
- ib_events.01.f: ""[ROOT.GetCountry.GetName] 만세!""
+ ib_events.01.f: "\"[ROOT.GetCountry.GetName] 만세!\""
  ib_events.01.a: "잘 되었다."
 
  ib_events.02.t: "자치권 부여"
  ib_events.02.d: "자랑스러운 [ROOT.GetCountry.GetName]의 [SCOPE.sCountry('autonomy_target_country').GetName]에 대한 자치권 부여가 무사히 종료되었다. [SCOPE.sCountry('autonomy_target_country').GetName]는 앞으로 본국의 간접적인 지배를 받으며 영원히 번영할 것이다."
- ib_events.02.f: ""[ROOT.GetCountry.GetName] 만세!""
+ ib_events.02.f: "\"[ROOT.GetCountry.GetName] 만세!\""
  ib_events.02.a: "잘 되었다."
 
  increase_autonomy_monthly_effect: "매달 5% 확률로 자치권 부여를 완료합니다"
