refactor: turn tech to modifier
This commit fixes the following error:

```
[techtreepanel.cpp:161]: Trying to add a tech
(roman_roads) to a category that does not exist in
the UI
```

This was solved by replacing the tech with a
modifier, which should also make the modifier more
visible to the players.

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -69,6 +69,7 @@
  japan_corporate_reforms: "Corporate Reforms"
  br_persia_persian_cultural_promotion: "Persian Cultural Promotion"
  br_persia_defensive_military_posture: "Defensive Military Posture"
+ br_modifier_romaioi_roman_roads: "Romaíon Infrastructure"
 
  city_worlds_desire_state: "City of Worlds Desire"
  great_city_state: "Magnificent City"
