--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -1,6 +1,8 @@
 ﻿l_english:
  AFG: "Kabulistan"
  AFG_ADJ: "Kabul"
+ ABU: "Haasa"
+ ABU_ADJ: "Haasa"
  ALB: "Illyrikon"
  ALB_ADJ: "Illyrikon"
  ANL: "Al-Andalus"
