--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -148,7 +148,25 @@
  building_university_athens: "Academy of Athens"
  building_libary_alexandria: "Libary of Alexandria"
  building_house_wisedom: "House Of Wisedom"
- building_masjid_al_haram: "Great Mosque of Mecca"
+ #building_masjid_al_haram: "Great Mosque of Mecca"
+
+building_Notre_Dame: "Notre Dame Cathedral"
+pmg_base_building_Notre_Dame: "Notre Dame Cathedral"
+pm_default_building_Notre_Dame: "Notre Dame Cathedral"
+building_Versailles: "Palace of Versailles"
+pmg_base_building_Versailles: "Palace of Versailles"
+pm_default_building_Versailles: "Palace of Versailles"
+building_Venice: "Venice Arsenal"
+pmg_base_building_Venice: "Venice Arsenal"
+pm_default_building_Venice: "Venice Arsenal"
+building_Mecca: "Mecca"
+pmg_base_building_Mecca: "Mecca"
+pm_default_building_Mecca: "Mecca"
+building_Jerusalem: "Jerusalem"
+pmg_base_building_Jerusalem: "Jerusalem"
+pm_default_building_Jerusalem: "Jerusalem"
+
+
 
  #Production Method Groups
  pmg_base_building_spices_plantation: "Base"
