--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -75,6 +75,7 @@
  br_modifier_andalusian_discrimination: "Andalusian Discrimination"
  br_modifier_andalusian_caliphate: "Caliphate"
  br_modifier_andalusian_conscription: "Improved Conscription"
+ br_modifier_romaioi_cultural_discrimination: "Cultural Discrimination"
 
  city_worlds_desire_state: "City of Worlds Desire"
  great_city_state: "Magnificent City"
