fix: fix decree name
No decrees have a `.` at the end of their name.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -199,7 +199,7 @@
  automatic_irrigation_building_spices_plantation: "Automatic Irrigation"
  default_building_spices_plantation: "Basic Production"
 
- decree_romanisation: "Romanization."
+ decree_romanisation: "Romanization"
  decree_romanisation_desc: "Begin efforts to \"Romanize\" this province."
 
  #Goods
