fix: add missing localization
This commit fixes missing localization keys for
modifiers and decisions.

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -69,6 +69,10 @@
  annex_NWC_desc: "Integrate Nordhafsveðr"
  annex_russians: "Integrate the Other Russian Princes"
  annex_russians_desc: "The Tatars have long trusted us to collect tribute from the other Russian princes on their behalf. We will take advantage of our favorable ties with the tatar court and persuade the Khan to ignore our expansion over the other Russian Princes."
+ annex_VAC: "Integrate African colony"
+ annex_VAC_desc: "Integrate African colony"
+ annex_GAC: "Integrate African colony"
+ annex_GAC_desc: "Integrate African colony"
 
  remove_inward_perfection: "Open Up"
  remove_inward_perfection_desc: "Open Up"
