--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -66,7 +66,8 @@
  japan_shogunate: "Shogunate"
  japan_military_tradition: "Samurai Tradition"
  japan_pacific_trade: "Pacific Trade Dominance"
- japan_corporate_reforms: "Corporate Reforms"
+ br_porcelain_modifier: "Productive Porcelain Industry"
+ br_corporate_reforms: "Corporate Reforms"
  br_persia_persian_cultural_promotion: "Persian Cultural Promotion"
  br_persia_defensive_military_posture: "Defensive Military Posture"
  br_modifier_romaioi_roman_roads: "Romaíon Infrastructure"
