--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -75,8 +75,8 @@
  br_modifier_andalusian_discrimination: "Andalusian Discrimination"
  br_modifier_andalusian_caliphate: "Caliphate"
  br_modifier_andalusian_conscription: "Improved Conscription"
- br_modifier_muslim_cultural_discrimination: "Muslim Cultural Discrimination"
- br_modifier_slavic_cultural_discrimination: "Slavic Cultural Discrimination"
+ br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
+ br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
 
  city_worlds_desire_state: "City of Worlds Desire"
  great_city_state: "Magnificent City"
