--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -35,6 +35,11 @@
  accept_english_decision: "Accept English"
  accept_english_decision_desc: "It's time we accept the English and give them the same rights as Danes."
 
+ br_end_slavic_oppression_decision: "End the oppression of the Balkan Slavs"
+ br_end_slavic_oppression_decision_desc: "End the oppression of the Balkan Slavs"
+ br_end_muslim_oppression_decision: "End the oppression of Muslim Subjects"
+ br_end_muslim_oppression_decision_desc: "End the oppression of our Muslim Subjects"
+
  #united_principalities: "Unite the Vlach Principalities"
  #united_principalities_desc: "Unite the Vlach Principalities"
 
@@ -78,6 +83,10 @@
 
  br_mandate_heaven_decision: "Claim Mandate of Heaven"
  br_mandate_heaven_decision_desc: "With control our control of China uncontested its time we claim the Mandate of Heaven for ourselves."
+ br_remove_china_political_turmoil_decision: "Peasant Freedoms"
+ br_remove_china_political_turmoil_decision_desc: "Peasants now have political and economic freedoms"
+ br_remove_china_rampant_corruption_decision: "End Corruption"
+ br_remove_china_rampant_corruption_decision_desc: "End Corruption"
 
  ere_re_name_decision: "Latinize Name: Roman Empire"
  ere_re_name_decision_desc: "Latinize our name to 'Roman Empire'"
