refactor: replace tech with modifier
This commit solves the following error:

```
[techtreepanel.cpp:161]: Trying to add a tech
(horde_mod) to a category that does not exist in
the UI
```

This tech is now replaced by a few modifiers.

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -79,6 +79,13 @@
  br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
  br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
 
+ # Horde
+ br_modifier_horde_slavic_oppression: "Slavic Oppression"
+ br_modifier_horde_legacy_of_the_khan: "Legacy of the Khan"
+ br_modifier_horde_khanate: "Khanate"
+ br_modifier_horde_reactionary_social_policies: "Reactionary Social Policies"
+ br_modifier_horde_army_prowess: "Army Prowess"
+
  city_worlds_desire_state: "City of Worlds Desire"
  great_city_state: "Magnificent City"
  merchant_state: "Grand Port"
