--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -86,6 +86,13 @@
  br_modifier_horde_reactionary_social_policies: "Reactionary Social Policies"
  br_modifier_horde_army_prowess: "Army Prowess"
 
+ # Italy
+ br_modifier_italy_foreign_policy: "Aggressive Foreign Policy"
+ br_modifier_italy_academia: "Italian Academia"
+ br_modifier_italy_accessible_stock_exchanges: "Accessible Stock Exchanges"
+ br_modifier_italy_colonial_dividends: "Colonial Dividends"
+ br_modifier_italy_gunboat_trade_diplomacy: "Gunboat Diplomacy"
+
  city_worlds_desire_state: "City of Worlds Desire"
  great_city_state: "Magnificent City"
  merchant_state: "Grand Port"
