--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -78,6 +78,7 @@
  br_modifier_andalusian_conscription: "Improved Conscription"
  br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
  br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
+ br_modifier_colonial_merchant_republic: "Merchant Republic"
 
  # Horde
  br_modifier_horde_slavic_oppression: "Slavic Oppression"
