--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -80,6 +80,7 @@
  br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
  br_modifier_colonial_merchant_republic: "Merchant Republic"
  br_modifier_mediterranean_merchant_republic: "Merchant Republic"
+ br_modifier_silk_road: "Silk Road"
 
  # Horde
  br_modifier_horde_slavic_oppression: "Slavic Oppression"
