refactor: replace tech with modifier
This commit solves the following error:

```
[techtreepanel.cpp:161]: Trying to add a tech
(defensive_tech_mod) to a category that does not
exist in the UI
```

This tech is now replaced by a modifier.

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -81,6 +81,7 @@
  br_modifier_colonial_merchant_republic: "Merchant Republic"
  br_modifier_mediterranean_merchant_republic: "Merchant Republic"
  br_modifier_silk_road: "Silk Road"
+ br_modifier_defensive_bonus: "Defensive Bonus"
 
  # Horde
  br_modifier_horde_slavic_oppression: "Slavic Oppression"
