fix: add missing localization for canal toll
This commit solves errors such as:

```
[modifier_types.cpp:473]: Modifier is missing loc
key! Modifier: goods_input_canalToll_add, LocKey:
modifier_goods_input_canalToll_add
[modifier_types.cpp:482]: Modifier is missing description loc key!
Modifier: goods_input_canalToll_add, LocKey:
modifier_goods_input_canalToll_add_desc
```

This is fixed by adding the localization keys in
the appropriate file.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -223,6 +223,15 @@
  modifier_goods_input_horse_mult: "@horse!$horse$ input"
  modifier_goods_input_horse_mult_desc: "A bonus or penalty to the amount of @horse!$horse$ consumed"
 
+ # Canal Toll
+ modifier_goods_output_canalToll_add: "@canalToll!$canalToll$ output"
+ modifier_goods_output_canalToll_add_desc: "The amount of @canalToll!$canalToll$ produced by buildings"
+ modifier_goods_input_canalToll_add: "@canalToll!$canalToll$ input"
+ modifier_goods_input_canalToll_add_desc: "The amount of @canalToll!$canalToll$ consumed by buildings"
+ modifier_goods_output_canalToll_mult: "Building @canalToll!$canalToll$ output"
+ modifier_goods_output_canalToll_mult_desc: "A bonus or penalty to the amount of @canalToll!$canalToll$ produced by buildings"
+ modifier_goods_input_canalToll_mult: "@canalToll!$canalToll$ input"
+ modifier_goods_input_canalToll_mult_desc: "A bonus or penalty to the amount of @canalToll!$canalToll$ consumed"
 
 
  pmg_horse_ranch: "Horse Ranch"
