--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -83,6 +83,7 @@
  br_modifier_silk_road: "Silk Road"
  br_modifier_defensive_bonus: "Defensive Bonus"
  br_modifier_elysium: "Elysium"
+ br_modifier_new_world_colony: "New World Colony"
 
  # Horde
  br_modifier_horde_slavic_oppression: "Slavic Oppression"
