--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -82,6 +82,7 @@
  br_modifier_mediterranean_merchant_republic: "Merchant Republic"
  br_modifier_silk_road: "Silk Road"
  br_modifier_defensive_bonus: "Defensive Bonus"
+ br_modifier_elysium: "Elysium"
 
  # Horde
  br_modifier_horde_slavic_oppression: "Slavic Oppression"
