refactor: restructure colonization tech
Because of the previous 2 commits, there are no
longer any modifiers in either of the two
colonization techs. Since these techs unlock the
exact same colonization options, both techs have
been merged into one.

This tech has also been renamed to better reflect
what it unlocks.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -89,8 +89,7 @@
  #tech
  romaioi_mod: "Romaíon Legacy" #keep for now
  tribal: "Tribal"
- new_world_colonial: "New World Colonial"
- africa_colonial: "Africa Colonial"
+ hostile_climate_colonization: "Early Hostile Climate Colonization"
  new_world_tribal: "New World Tribalism"
 
  #Companies
