feat: state-based silk road
# Motivation

The current silk road system does not really have
any connection with any states, which makes it a
little bit uninteresting.

This commit now binds the silk road to states.

# Changes

Countries at game start now will get the
country-wide modifier if they control one (or part
of one) state that has a silk road modifier.

The silk road states were chosen from the
following map:
https://en.wikipedia.org/wiki/Silk_Road#/media/File:SeidenstrasseGMT.JPG

The modifier has also been split between the
state-based one and the country-wide one.

Every month countries that do not control at least
one part of a state with the silk road modifier
will lose the country-wide modifier.

Every month countries that control at least one
part of a state with the silk road modifier will
gain the country-wide modifier if they do not have
it already.

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -100,8 +100,11 @@
  br_modifier_italy_colonial_dividends: "Colonial Dividends"
  br_modifier_italy_gunboat_trade_diplomacy: "Gunboat Diplomacy"
 
+ # State modifiers
  city_worlds_desire_state: "City of Worlds Desire"
  great_city_state: "Magnificent City"
+ br_state_modifier_silk_road: "Silk Road"
+
  merchant_state: "Grand Port"
  roman_senate: "Synkletos"
  romaioi_corrupt_pronoia: "Thematic deterioration"
