--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -81,14 +81,17 @@
  br_modifier_colonial_merchant_republic: "Merchant Republic"
  br_modifier_mediterranean_merchant_republic: "Merchant Republic"
  br_modifier_silk_road: "Silk Road"
- br_modifier_defensive_bonus: "Defensive Bonus"
+ br_modifier_trans_sahara: "Trans-Sahara Trade Route"
+ br_modifier_defensive_bonus: "Porcupine Strategy"
  br_modifier_elysium: "Elysium"
  br_modifier_new_world_colony: "New World Colony"
  br_modifier_african_colony: "African Colony"
+ br_modifier_desert_culture: "Desert Culture"
+
 
  # Horde
  br_modifier_horde_slavic_oppression: "Slavic Oppression"
- br_modifier_horde_legacy_of_the_khan: "Legacy of the Khan"
+ br_modifier_horde_legacy_of_the_khan: "Mongol Preference"
  br_modifier_horde_khanate: "Khanate"
  br_modifier_horde_reactionary_social_policies: "Reactionary Social Policies"
  br_modifier_horde_army_prowess: "Army Prowess"
@@ -100,21 +103,9 @@
  br_modifier_italy_colonial_dividends: "Colonial Dividends"
  br_modifier_italy_gunboat_trade_diplomacy: "Gunboat Diplomacy"
 
- # State modifiers
- city_worlds_desire_state: "City of Worlds Desire"
- great_city_state: "Magnificent City"
- br_state_modifier_silk_road: "Silk Road"
-
- merchant_state: "Grand Port"
- roman_senate: "Synkletos"
- romaioi_corrupt_pronoia: "Thematic deterioration"
- romaioi_reformed_pronoia: "Pronoia"
-
  liberum_veto: "Liberum Veto"
  piotrkow_statutes: "Piotrkow Statutes"
 
-
- 
  edo_class_system: "Edo Social Class System"
  edo_society_ig: "Edo Society"
 
@@ -130,4 +121,19 @@
  modifier_revere_the_emperor_desc: "This Leader's popularity has inspired the people."
  modifier_popular_emperor: "Popular Ruler"
  modifier_popular_emperor_desc: "This Ruler is revered by the people."
+
+ roman_senate: "Synkletos"
+ romaioi_corrupt_pronoia: "Thematic deterioration"
+ romaioi_reformed_pronoia: "Pronoia"
+
+
+ # State modifiers
+ city_worlds_desire_state: "City of Worlds Desire"
+ great_city_state: "Magnificent City"
+ br_state_modifier_silk_road: "Silk Road"
+
+ merchant_state: "Grand Port"
+
+
+
  
