--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -82,7 +82,8 @@
  br_modifier_mediterranean_merchant_republic: "Merchant Republic"
  br_modifier_silk_road: "Silk Road"
  br_modifier_trans_sahara: "Trans-Sahara Trade Route"
- br_modifier_defensive_bonus: "Porcupine Strategy"
+ br_modifier_defensive_bonus: "Defensive Militarized Society"
+ br_modifier_aggressive_bonus: "Aggressive Militarized Society"
  br_modifier_elysium: "Elysium"
  br_modifier_new_world_colony: "New World Colony"
  br_modifier_african_colony: "African Colony"
