feat: add new society tech era
# Motivation

Similar to commit
6b027224b93a1db4460e6f4b50fa3643a478e38c, the idea
is to expand the tech tree to include more
technologies to research.

# Changes

- Added 15 new society techs
- Moved some of the laws to said new techs

# Future work

- Remove base country modifiers and add them to
  the society techs
- Add PMs to universities/urban centers
- Add unique icons to each of the new techs
- Add techs for the last category

--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -30,3 +30,35 @@
  newcomen_engine_desc: "An early steam engine that was used to pump water out of mines."
  track: "Track"
  track_desc: "The wagonway is considered the prototype and predecessor of railways, and almost all mines built in the 16th and 17th centuries used wagonway mining cars as the only mode of transportation."
+
+ # Society
+ tech_mercantilism: "Mercantilism"
+ tech_mercantilism_desc: "An economic theory that emphasizes the importance of accumulating wealth through trade and the establishment of colonies."
+ tech_agrarianism: "Agrarianism"
+ tech_agrarianism_desc: "A political and social philosophy that emphasizes the importance of agriculture and rural life."
+ smithian_economics: "Smithian Economics"
+ smithian_economics_desc: "An economic theory that was developed by Adam Smith and emphasizes the importance of free markets, competition, and self-interest."
+ fiat_currency: "Fiat Currency"
+ fiat_currency_desc: "A type of currency that is not backed by a physical commodity, such as gold or silver, but is instead declared legal tender by a government."
+ silver_standard: "Silver Standard"
+ silver_standard_desc: "A monetary system in which the standard economic unit of account is a fixed weight of silver."
+ municipal_charter: "Municipal Charter"
+ municipal_charter_desc: "A legal document that grants a town or city certain rights and privileges, such as self-government and the ability to collect taxes."
+ public_sphere: "Public Sphere"
+ public_sphere_desc: "A social space where individuals can come together to discuss and debate issues of common interest."
+ insurance_companies: "Insurance Companies"
+ insurance_companies_desc: "Businesses that provide financial protection against losses, such as property damage, illness, or death, in exchange for regular payments."
+ constabulary: "Constabulary"
+ constabulary_desc: "A police force that is responsible for maintaining law and order in a particular area."
+ skepticism: "Skepticism"
+ skepticism_desc: "A philosophical position that questions the possibility of knowledge and the reliability of perception and belief."
+ rights_of_man: "Rights of Man"
+ rights_of_man_desc: "The idea that all human beings are entitled to certain rights and freedoms, such as liberty, equality, and justice."
+ divine_right: "Divine Right"
+ divine_right_desc: "The belief that a monarch's authority to rule comes directly from God."
+ separation_of_powers: "Separation of Powers"
+ separation_of_powers_desc: "The idea of distinct branches of government with different roles which oversee one another to prevent corruption and abuse has become vastly more popular since the relative success of the 'great American experiment', with her Constitution splitting the government into executive, legislative and judicial branches."
+ early_modern_universities: "Early Modern Universities"
+ early_modern_universities_desc: "Institutions of higher learning that emerged in Europe during the late Middle Ages and early modern period. They were centers of scholarship and research."
+ natural_history: "Natural History"
+ natural_history_desc: "The study of plants, animals, and minerals, with a focus on classification, description, and observation."
