Revert "feat: add new production tech era"
This reverts commit e686ca8e68b6c6c504c53daf586ab3bfdbbdc5c0.

It is temporarily reverted because of some release
issue.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -250,6 +250,9 @@
  pm_horse_transport: "Horse Drawn Transport"
  pm_no_street_transport: "Manpower Street Transport"
 
+ track: "Track"
+ track_desc: "The wagonway is considered the prototype and predecessor of railways, and almost all mines built in the 16th and 17th centuries used wagonway mining cars as the only mode of transportation."
+
 
 
  #Wars
